# Jepstone_CircuitPython_QMI8658

./: .gitignore  README.rst  README.rst.license  jepstone_qmi8658.py  optional_requirements.txt  pyproject.toml  requirements.txt
LICENSES/: MIT.txt
