# SPDX-FileCopyrightText: 2022 Brian Jepson
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "jepstone-qmi8658"
description = "CircuitPython library for the QMI8658 IMU"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Brian Jepson", email = "bjepson@jepstone.net"}
]
urls = {Homepage = "https://github.com/bjepson/Jepstone_CircuitPython_QMI8658"}
keywords = [
    "circuitpython",
    "micropython",
    "qmi8658",
    "accelerometer",
    "imu",
    "gyroscope",
    "jepstone",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["jepstone_qmi8658"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}